# ticktick-cli-for-agents

./: .env.example  .gitignore  Makefile  README.md  RELEASING.md  pyproject.toml
skills/ticktick-cli/: SKILL.md
skills/ticktick-cli/agents/: openai.yaml
skills/ticktick-cli/references/: command-recipes.md  read-and-mutate-recipes.md  setup-and-auth.md  tasks.md  troubleshooting.md
src/ticktick_cli/: __init__.py  __main__.py  app.py  cli.py  commands.py  common.py  parser.py
tests/: test_cli.py  test_cli_e2e.py
tests/e2e/: conftest.py  test_core_help_e2e.py  test_habits_e2e.py  test_projects_folders_columns_e2e.py  test_surface_contract.py  test_tags_e2e.py  test_tasks_e2e.py  test_user_focus_e2e.py
tests/e2e/references/: command_surface.json  output_schemas.json
