[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ticktick-cli"
version = "0.1.0"
description = "Standalone command-line interface for TickTick built on ticktick-sdk"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Egor Lynko" },
]
keywords = [
  "ticktick",
  "cli",
  "task-management",
  "productivity",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = [
  "ticktick-sdk>=0.4.3",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "jsonschema>=4.23.0",
]

[project.scripts]
ticktick = "ticktick_cli.app:cli_main"

[project.urls]
Homepage = "https://github.com/flexoid/ticktick-cli"
Repository = "https://github.com/flexoid/ticktick-cli"
Issues = "https://github.com/flexoid/ticktick-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ticktick_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "e2e: live end-to-end CLI tests against a real TickTick account",
  "e2e_core: core CLI help-path E2E tests (server/auth)",
  "e2e_user: user/account command E2E tests",
  "e2e_focus: focus analytics command E2E tests",
  "e2e_projects: folders/projects/columns command E2E tests",
  "e2e_tags: tag command E2E tests",
  "e2e_tasks: task command E2E tests",
  "e2e_habits: habit command E2E tests",
]
